# AliceNeoLog

./: README.md  pyproject.toml  requirements.txt
src/alice_neo_log/: __init__.py  main.py
tests/: test_main.py
